# ShapedSlp

./: .gitmodules  BatchSubstrBenchmark.cpp  CMakeLists.txt  Common.cpp  Common.hpp  DirectAccessibleGammaCode.hpp  DirectAccessibleGammaCodeWithRrr.hpp  FixedBitLenCode.hpp  IncBitLenCode.hpp  LICENSE.txt  LceBenchmark.cpp  NaiveSlp.hpp  PlainSlp.hpp  PoSlp.hpp  README.md  SelectType.hpp  SelfShapedSlp.hpp  SelfShapedSlpV2.hpp  ShapedSlp.hpp  ShapedSlpV2.hpp  ShapedSlp_Status.hpp  SlpEncBuild.cpp  SubstrBenchmark.cpp  VlcVec.hpp
folca/: fbtree.cpp  fbtree.h  onlinebp.c  onlinebp.h  util2.hpp
